Fix icon-text alignment issue in post fields

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -93,6 +93,7 @@
   }
 
   li {
+    display: flex;
     list-style: none;
     border-bottom: 1px $gray-200 solid;
     padding: 0.5rem 0;
